Bug 459199 - Animated wallpaper stops if a maximised window is present on 1st Virtual Desktop
Summary: Animated wallpaper stops if a maximised window is present on 1st Virtual Desktop
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 5.25.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-16 03:39 UTC by Bacteria
Modified: 2022-09-16 15:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments
Video demonstrating the bug (2.49 MB, video/x-matroska)
2022-09-16 04:27 UTC, Bacteria
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bacteria 2022-09-16 03:39:47 UTC
SUMMARY
Animated wallpaper stops if a maximised window is present on 1st Virtual Desktop. If I minimize is the window, the wallpaper starts animating again. If I move the maximised window to any other VD, the animation works.


STEPS TO REPRODUCE
1. Create more than 1 VD. (My setup is a 2x2 VD grid)
2. Open any window on 1st VD (I tested with Firefox and Dolphin) and maximise it.
3. Switch to other VD or launch Desktop Grid

OBSERVED RESULT
The animated wallpaper isn't animating anymore

EXPECTED RESULT
The animated wallpaper should continue to animate.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.90
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.6
Kernel Version: 5.19.8-arch1-1 (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 Bacteria 2022-09-16 04:27:55 UTC
Created attachment 152093 [details]
Video demonstrating the bug
Comment 2 Bug Janitor Service 2022-09-16 14:01:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2128
Comment 3 Fushan Wen 2022-09-16 15:01:03 UTC
Git commit eb3483123ea238d8faf7fcb1081f0175b7655f0a by Fushan Wen.
Committed on 16/09/2022 at 14:37.
Pushed by fusionfuture into branch 'master'.

wallpapers/image: fix wrong usage of `std::bind`

`m_virtualDesktopInfo->currentDesktop()` will be regarded as a static
value in `std::bind`, which prevents the current desktop from being
updated, so use lambda instead.
FIXED-IN: 5.26

M  +6    -8    wallpapers/image/plugin/utils/maximizedwindowmonitor.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/eb3483123ea238d8faf7fcb1081f0175b7655f0a
Comment 4 Fushan Wen 2022-09-16 15:01:54 UTC
Git commit 2eb897851722dfe0ff4e2a23246c7344e1ec9e9b by Fushan Wen.
Committed on 16/09/2022 at 15:01.
Pushed by fusionfuture into branch 'Plasma/5.26'.

wallpapers/image: fix wrong usage of `std::bind`

`m_virtualDesktopInfo->currentDesktop()` will be regarded as a static
value in `std::bind`, which prevents the current desktop from being
updated, so use lambda instead.
FIXED-IN: 5.26


(cherry picked from commit eb3483123ea238d8faf7fcb1081f0175b7655f0a)

M  +6    -8    wallpapers/image/plugin/utils/maximizedwindowmonitor.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/2eb897851722dfe0ff4e2a23246c7344e1ec9e9b