wallpapers/image: fix wrong usage of `std::bind`

`m_virtualDesktopInfo->currentDesktop()` will be regarded as a static
value in `std::bind`, which prevents the current desktop from being
updated, so use lambda instead.

BUG: 459199
FIXED-IN: 5.26